<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- showUserInfoSlidingMenu -->

    <!-- upload -->
    <string name="Text_uploadingListinitper">Waiting</string>

    <!-- video -->
    <string name="downloadDeletetip">Tips</string>

    <!-- login / register -->
    <string name="showUserlogin">Login</string>
    <string name="LoginButton">Login</string>
    <string name="LoginSuccess">Success!</string>
    <string name="RegisterButton">Register</string>
    <string name="RegisterPasswordlimit">Your password must be greater than the six less than or equal to eight combinations of Numbers and characters.</string>
    <string name="RegisterUsernamelimit">User name cannot be empty!</string>

    <string name="app_name">E3DGallery</string>
    <string name="soft_update_no">No update available!</string>
    <string name="soft_update_title">New version found：</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_update_later">Later</string>
    <string name="soft_updating">Updating</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="menu_autonext">Auto Next</string>
    <string name="delete_ensure">Are you sure to delete the selected ?</string>
    <string name="delete_dir">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel All</string>
    <string name="error">Warning</string>
    <string name="error_message">STOP! Unsupported video format!</string>
    <string name="tab_video">Local Video</string>
    <string name="tab_image">Local Image</string>
    <string name="exit_toast">Click again to exit</string>
    <string name="default_version">V1.0</string>
    <string name="guanwang">Website: www.evistek.com</string>
    <string name="weixin">WeChat ID: EVISTEK</string>
    <string name="copyright">©2010&#8211;2016 Shanghai Evis Technology Corp., Ltd</string>
    <string name="loading">Loading...</string>
    <string name="no_more_image">No more images</string>
    <string name="image">Image</string>
    <string name="net_not_available">Network is unavailable! Please check!</string>
    <string name="load_fail_images">Fail to load image</string>

    <string name="download_title">Download Manager</string>
    <string name="download_downloading">Downloading</string>
    <string name="download_waiting">Waiting</string>
    <string name="download_finish">Done</string>
    <string name="download_cancelled">Cancelled</string>
    <string name="download_paused">Paused</string>
    <string name="download_notification">Completed %1$d,  Total %2$d</string>
    <string name="download_add_task">Add to download</string>
    <string name="download_empty">No task</string>
    <string name="download_joined">Already added</string>
    <string name="thirdparty_login">Login with thirdparty account</string>
    <!-- for v2 -->
    <string name="movie">3D Movie</string>
    <string name="mv">MV</string>
    <string name="vr">VRPanorama</string>
    <string name="tabname_home">Home</string>
    <string name="tabname_video">Video</string>
    <string name="tabname_image">Image</string>
    <string name="tabname_about">Me</string>
    <string name="detail_title">Detail</string>
    <string name="detail_actors">Actors:&#160;&#160;</string>
    <string name="detail_time">Date:&#160;&#160;</string>
    <string name="detail_location">Region:&#160;&#160;</string>
    <string name="detail_play_count">Playback:&#160;&#160;</string>
    <string name="detail_play_count_suffix">&#160; played</string>
    <string name="detail_intro">Brief</string>
    <string name="network_unavailable">Network broken</string>
    <string name="detail_alert_dialog_content">Please check network connection, and try again!</string>
    <string name="try_to_refresh">Drag to refresh</string>
    <string name="end_tag_name">~~No more~~</string>
    <string name="v2_clicktologin">Login in</string>
    <string name="v2_clicktologout">Login out</string>
    <string name="v2_logout_tips">Confirm to Login out?</string>
    <string name="v2_history">History</string>
    <string name="v2_save">Favorites</string>
    <string name="v2_download">Cached</string>
    <string name="v2_aboutus">About us</string>
    <string name="v2_checkandupdate">Check for Updates</string>
    <string name="v2_user_title_select">Select All</string>
    <string name="v2_user_title_delete">Delete</string>
    <string name="v2_user_title_edit">Edit</string>
    <string name="v2_user_title_cancel">Cancel</string>
    <string name="v2_user_listitem_time">Duration:</string>
   <string name="v2_local_resource">Local Media</string>
    <string name="log_warning">Please use QQ to login in</string>
    <string name="slide_mode">Slide Playback</string>
    <string name="select_images">Please select picture for playback!"</string>
    <string name="delete_fail">Failed to delete</string>
    <string name="delete_fail_msg">Please delete manually</string>
    <string name="empty_favorite_no">No favorite</string>
    <string name="empty_playrecord_no">No play record</string>
    <string name="need_login">Please login first</string>
    <string name="not_login">Login</string>
    <string name="soft_version_limited">The current version client can\'t access server</string>
    <string name="soft_version_limited_title">Version limited</string>
    <string name="v2_choose_no">Please choose to delete</string>
    <string name="v2_continue">Continue</string>
    <string name="v2_current_version">version</string>
    <string name="v2_go_setting">Go setting</string>
    <string name="v2_insert_password">password</string>
    <string name="v2_insert_userName">username</string>
    <string name="v2_need_device_msg">Please choose your device to get best performance</string>
    <string name="v2_need_device_title">Device Setting</string>
    <string name="compatibility_title">Compatibility Problem</string>
    <string name="compatibility_msg">This device is not a glasses-free 3D device, or not compatible with the software. Can not play!</string>

    <string name="buffering">Please wait for buffering...</string>
    <string name="player_init_fail">Player initialization failed</string>
    <string name="loading_fail">Loading failed</string>
    <string name="or">Or</string>
</resources>
