<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HistoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/v2_user_history_backbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/v2_history"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/v2_user_history_listitem_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:text="@string/v2_user_title_delete"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/v2_user_history_listitem_selectall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toLeftOf="@+id/v2_user_history_listitem_delete"
            android:clickable="true"
            android:text="@string/v2_user_title_select"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/v2_user_history_listitem_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:text="@string/v2_user_title_edit"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/v2_user_history_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

    <include
        android:id="@+id/v2_user_history_empty_view"
        layout="@layout/empty" />
</LinearLayout>
