<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/v2_user_login_backbt"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/showUserlogin"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/BtLogRegister"
            android:text="@string/RegisterButton"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <EditText
        android:id="@+id/EtLogUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/v2_insert_userName"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/EtLogPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/v2_insert_password"
        android:maxLength="8"
        android:password="true"
        android:textSize="15sp" />

    <!--<EditText-->
        <!--android:id="@+id/waring_msg"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:textSize="15sp"-->
        <!--android:textColor="@android:color/holo_red_dark"-->
        <!--android:background="#00000000"-->
        <!--android:text="@string/log_warning"/>-->

    <Button
        android:id="@+id/BtLogLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:text="@string/LoginButton"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
        <View
            android:background="#bab8b8"
            android:layout_width="106dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdparty_login"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="10dp"/>
        <View
            android:background="#bab8b8"
            android:layout_width="106dp"
            android:layout_marginStart="10dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/qq_icon"
                android:onClick="qqLogin"
                android:clickable="true"
                android:layout_marginRight="20dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/weixin_icon"
                android:focusable="false"
                android:clickable="false"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>